--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rnkredmint",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,13 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.9",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.4"
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "axios": "^1.3.4",
+    "expo": "~47.0.12",
+    "expo-dev-client": "~2.0.1",
+    "expo-linking": "~3.3.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
+    "react": "18.1.0",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
-  "private": true
+  "private": false
 }
