--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rnkredmint",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "axios": "^1.3.4",
     "expo": "~47.0.12",
     "expo-dev-client": "~2.0.1",
@@ -20,7 +20,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-webview": "11.23.1"
+    "react-native-webview": "11.23.1",
+    "rn-kredmint": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
