--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
-    "react-native-webview": "11.23.1",
-    "rn-kredmint": "^1.0.1"
+    "react-native-webview": "11.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
